Forgot to svn remove the file 'missing'.
git-svn-id: http://superswitcher.googlecode.com/svn/trunk@7 a151239e-a51d-0410-ae3d-21baef35e071

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-03  Nigel Tao  <nigeltao@gnome.org>  revision 7
+
+	* Forgot to svn remove the file 'missing'.
+
+
 2006-11-03  Nigel Tao  <nigeltao@gnome.org>  revision 6
 
 	* svn remove'd some ignorable files from the repo.
