* Now does window-frame geometry calculations "the right way", via a   window's _NET_FRAME_EXTENTS X property, rather than presuming that its   frame is the same as its parent X window.
git-svn-id: http://superswitcher.googlecode.com/svn/trunk@9 a151239e-a51d-0410-ae3d-21baef35e071

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-11-27  Nigel Tao  <nigeltao@gnome.org>  revision 9
+
+	* Now does window-frame geometry calculations "the right way", via a
+	  window's _NET_FRAME_EXTENTS X property, rather than presuming that its
+	  frame is the same as its parent X window.
+
+
 2006-11-03  Nigel Tao  <nigeltao@gnome.org>  revision 8
 
 	* One more svn:ignore'd file.
