* Version 0.4 released. * Added debian/* to aid in building .deb packages.
git-svn-id: http://superswitcher.googlecode.com/svn/trunk@13 a151239e-a51d-0410-ae3d-21baef35e071

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+--------------------  2006-12-27  Version 0.4 released  --------------------
+
+2006-12-27  Nigel Tao  <nigeltao@gnome.org>  revision 13
+
+	* Added debian/* to aid in building .deb packages.
+	  Thanks to Drew Kerr for his help.
+
+
 2006-12-26  Nigel Tao  <nigeltao@gnome.org>  revision 12
 
 	* Can now drag-and-drop workspaces.
