--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-12  Nigel Tao  <nigeltao@gnome.org>  revision 19
+
+  * First draft of a D-Bus interface.
+
+
 2007-01-07  Nigel Tao  <nigeltao@gnome.org>  revision 18
 
   * New add and remove workspace buttons.
