Now builds on gtk 2.11.
git-svn-id: http://superswitcher.googlecode.com/svn/trunk@28 a151239e-a51d-0410-ae3d-21baef35e071

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-2007-08-253  Nigel Tao  <nigeltao@gnome.org>  revision 27
+2007-08-29  Nigel Tao  <nigeltao@gnome.org>  revision 28
+
+  * Now builds on gtk 2.11.
+
+
+2007-08-25  Nigel Tao  <nigeltao@gnome.org>  revision 27
 
   * Some more svn:ignore'd files.
 
