--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-11-04  Nigel Tao  <nigeltao@gnome.org>  revision 31
+
+  * Fixed crasher with windows belonging to no workspace (e.g. Tilda windows).
+
+
 2007-10-22  Nigel Tao  <nigeltao@gnome.org>  revision 30
 
   * Updated debian/* to new version (0.6).
