* Fixed build error when xcomposite headers aren't present.     Thanks to ez4u2sai for the patch, attached to bug #19.     http://code.google.com/p/superswitcher/issues/detail?id=19
git-svn-id: http://superswitcher.googlecode.com/svn/trunk@32 a151239e-a51d-0410-ae3d-21baef35e071

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-23  Nigel Tao  <nigeltao@gnome.org>  revision 32
+
+  * Fixed build error when xcomposite headers aren't present.
+    Thanks to ez4u2sai for the patch, attached to bug #19.
+    http://code.google.com/p/superswitcher/issues/detail?id=19
+
+
 2007-11-04  Nigel Tao  <nigeltao@gnome.org>  revision 31
 
   * Fixed crasher with windows belonging to no workspace (e.g. Tilda windows).
