Now builds (again) on gtk 2.8.
git-svn-id: http://superswitcher.googlecode.com/svn/trunk@34 a151239e-a51d-0410-ae3d-21baef35e071

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-18  Nigel Tao  <nigeltao@gnome.org>  revision 34
+
+  * Now builds (again) on gtk 2.8.
+
+
 2008-04-17  Nigel Tao  <nigeltao@gnome.org>  revision 33
 
   * More comprehensive fix for crasher with windows belonging to no workspace.
